--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,6 @@ dependencies {
     //    compile files('libs/ShareSDK-Wechat-Moments-2.8.1.jar')
     //    compile files('libs/libapshare20161108.jar')
     compile project(':opendanmaku')
-
     compile project(':FlycoTabLayout_Lib')
+    compile 'com.google.code.gson:gson:2.8.0'
 }
