--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
 include ':app', ':slidingmenu_library', ':xutils', ':xutils3', ':pullToRefreshlibrary', ':pullToRefreshsample', ':JPushExample(603036)', ':PhotoView', ':library', ':ShareSDK', ':sharesdk', ':share', ':opendanmaku', ':FlycoTabLayout_Lib'
+include ':testPalyMediaInWebView'
