--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         config {
             keyAlias 'chenrongfa'
             keyPassword '123456'
-            storeFile file('I:/BaiduNetdiskDownload/keystore/crf.jks')
-            storePassword 'chenrongfa'
+            storeFile file('I:/BaiduNetdiskDownload/keystore/chenrongfa.jks')
+            storePassword '123456'
 //            storeFile file("../demokey.keystore")
 //            storePassword "123456"
 //            keyAlias "demokey.keystore"
